# spl-devops

./: README.md
bash20/: excercise_1.sh  excercise_10.sh  excercise_11.sh  excercise_12.sh  excercise_14.sh  excercise_15.sh  excercise_16.sh  excercise_17.sh  excercise_18.sh  excercise_19.sh  excercise_2.sh  excercise_20.sh  excercise_3.sh  excercise_4.sh  excercise_5.sh  excercise_6.sh  excercise_8.sh  excercise_9.sh
flask-app/: README.md  pyproject.toml  requirements.txt
flask-app/src/: __init__.py  config.py  logs.py
flask-app/src/routes/: __init__.py  reviews.py  wishlist.py
flask-app/src/tools/: debug.py
flask-app/tests/: conftest.py  test_app.py  test_reviews.py  test_wishlist.py
regex20/: excercise_1.sh  excercise_10.sh  excercise_11.sh  excercise_12.sh  excercise_13.sh  excercise_14.sh  excercise_15.sh  excercise_16.sh  excercise_17.sh  excercise_18.sh  excercise_19.sh  excercise_2.sh  excercise_20.sh  excercise_3.sh  excercise_4.sh  excercise_5.sh  excercise_6.sh  excercise_7.sh  excercise_8.sh  excercise_9.sh
